[Mac] Fix tools menu button spacing when no extensions installed.

This cl corrects the spacing between the omnibox and the tools menu
button when there are no extension installed. Before the fix, the
button was 2pt too close to the omnibox.

R=avi@chromium.org
BUG=634918

Review-Url: https://codereview.chromium.org/2490833002
Cr-Commit-Position: refs/heads/master@{#431017}

Former-commit-id: a1b59c4930b456e8bc36574631fba03a77e38a15